--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
 
 h1{
     font-size: 5em;
+    font-weight: 700;
 }
 h3{
     font-size: 3em;
@@ -42,6 +43,7 @@ h3{
 }
 .box{
     /*border: 2px solid var(--cor-botao);*/
+    font-weight: 700;
     background-color: var(--cor-botao);
     border-radius: 10px;
     display: inline-block;
