--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ h1{
     font-size: 5em;
     font-weight: 700;
 }
+
+h2{
+    font-size: 4em;
+
+}
 h3{
     font-size: 3em;
     margin-top: 20px;
