--- a/style.css
+++ b/style.css
@@ -69,3 +69,17 @@ h3{
     border: 0;
     background: var(--cor-botao);
 }
+
+@media screen and (max-width: 767px) {
+    body {
+        align-items: center;
+        justify-content: center;
+        padding: 0 20px; /* Adiciona um espaço de 20px nas laterais */
+        text-align: center; /* Centraliza o texto */
+    }
+
+    .box {
+        margin: 10px; /* Ajusta a margem para um valor menor */
+        font-size: 3em; /* Reduz o tamanho da fonte */
+    }
+}
